--- a/views/wordBookList.ejs
+++ b/views/wordBookList.ejs
@@ -10,6 +10,6 @@
   </body>
 <ul id="wordbooks">
   <% wordbooks.forEach(function(wordbooks){ %>
-    <li><%= wordbooks.front_card %> --> <%= wordbooks.back_card %></li>
+    <li><%= wordbooks._id %>: <%= wordbooks.front_card %> --> <%= wordbooks.back_card %></li>
   <% }) %>
 </ul></html>
