--- a/views/wordBookList.ejs
+++ b/views/wordBookList.ejs
@@ -1,15 +1,100 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-<ul id="wordbooks">
-  <% wordbooks.forEach(function(wordbooks){ %>
-    <li><%= wordbooks._id %>: <%= wordbooks.front_card %> --> <%= wordbooks.back_card %></li>
-  <% }) %>
-</ul></html>
+<head>
+ <title>Bootstrap 101 Template</title>
+ <!-- Bootstrap -->
+ <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
+</head>
+<body style="padding-top: 30px;" onload="">
+<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
+ <!-- Brand and toggle get grouped for better mobile display -->
+ <div class="navbar-header">
+	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+	 <span class="sr-only">Toggle navigation</span>
+	 <span class="icon-bar"></span>
+	 <span class="icon-bar"></span>
+	 <span class="icon-bar"></span>
+	</button>
+	<a class="navbar-brand" href="index.html">１ヶ月で作ってみました</a>
+ </div>
+
+ <!-- Collect the nav links, forms, and other content for toggling -->
+ <div class="collapse navbar-collapse navbar-ex1-collapse">
+	<ul class="nav navbar-nav">
+	 <li><a href="index.html">ホーム</a></li>
+	 <li class="dropdown">
+		<a href="learning.html" class="dropdown-toggle" data-toggle="dropdown">はじめに <b class="caret"></b></a>
+		<ul class="dropdown-menu">
+		 <li><a href="learn-bootstrap.html">Bootstrap とは？</a></li>
+		 <li><a href="how-to-use.html">Bootstrap3 導入の仕方</a></li>
+		 <li><a href="html.html">基本のHTMLコード</a></li>
+		</ul>
+	 </li>
+	 <li class="dropdown">
+		<a href="css.html" class="dropdown-toggle" data-toggle="dropdown">CSS <b class="caret"></b></a>
+		<ul class="dropdown-menu">
+		 <li><a href="css.html#grid-system">グリッドシステム</a></li>
+		 <li><a href="css.html#type">タイポグラフィ</a></li>
+		 <li><a href="css.html#code">コードの表示</a></li>
+		 <li><a href="css.html#table">テーブル(表)</a></li>
+		 <li><a href="css.html#form">フォーム</a></li>
+		 <li><a href="css.html#buttons">ボタン</a></li>
+		 <li><a href="css.html#helper">ヘルパークラス</a></li>
+		 <li><a href="css.html#responsive">レスポンシブWebデザインで使えるコード</a></li>
+		</ul>
+	 </li>
+	 <li class="dropdown">
+		<a href="components.html" class="dropdown-toggle" data-toggle="dropdown">Components <b class="caret"></b></a>
+		<ul class="dropdown-menu">
+		 <li><a href="components.html#glyphicons">アイコン</a></li>
+		 <li><a href="components.html#dropdowns">ドロップダウン</a></li>
+		</ul>
+	 </li>
+	 <li><a href="http://www.hrgrweb.com">hrgrweb.com</a></li>
+	</ul>
+ </div><!-- /.navbar-collapse -->
+</nav>
+
+<div class="jumbotron">
+ <div class="container">
+	<h1><%= title %></h1>
+ </div>
+</div>
+<div class="container">
+<div class="row">
+
+ <table class="table table-striped table-bordered table-hover" id="wordbooks">
+	<thead>
+	<tr>
+	 <th>No.</th>
+	 <th>単語帳名</th>
+	 <th>備考</th>
+	 <th>処理</th>
+	</tr>
+	</thead>
+	<tbody>
+	<% var i=0;%>
+	<% wordbooks.forEach(function(wordbooks){ %>
+	<% i = i+1 %>
+	<tr>
+	 <td><a href="cards/<%= wordbooks._id %>"><%= i %></a></td>
+	 <td><%= wordbooks.word_book_name %></td>
+	 <td><%= wordbooks.biko %></td>
+	 <td><button type="button" class="btn btn-default btn-xs">削除</button></td>
+	</tr>
+	<% }) %>
+	</tbody>
+ </table>
+
+</div><!-- /.row -->
+</div><!-- /.container -->
+<div class="text-center">
+ Copyright &copy; 2014 SofPyon, All Rights Reserved.
+</div>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="http://code.jquery.com/jquery.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="/js/bootstrap.min.js"></script>
+</body>
+</html>
