--- a/views/wordBookRegist.ejs
+++ b/views/wordBookRegist.ejs
@@ -6,6 +6,7 @@
  <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
 <body style="padding-top: 30px;" onload="">
+
 <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
  <!-- Brand and toggle get grouped for better mobile display -->
  <div class="navbar-header">
@@ -60,41 +61,34 @@
 	<h1><%= title %></h1>
  </div>
 </div>
+<form action="/wordbooks" method="post">
 <div class="container">
 <div class="row">
-<%if(typeof msg != 'undefined'){%> <%= msg %> <% }%>
- <table class="table table-striped table-bordered table-hover" id="wordbooks">
-	<thead>
-	<tr>
-	 <th>No.</th>
-	 <th>単語帳名</th>
-	 <th>備考</th>
-	 <th>処理</th>
-	</tr>
-	</thead>
-	<tbody>
-	<% var i=0;%>
-	<% wordbooks.forEach(function(wordbooks){ %>
-	<% i = i+1 %>
-	<tr>
-	 <td><a href="cards/<%= wordbooks._id %>"><%= i %></a></td>
-	 <td><%= wordbooks.word_book_name %></td>
-	 <td><%= wordbooks.biko %></td>
-	 <td><button type="button" class="btn btn-default btn-xs">削除</button></td>
-	</tr>
-	<% }) %>
-	</tbody>
- </table>
 
+	<span class="glyphicon glyphicon-book">単語帳名</span>
+	<div class="form-group">
+	<div class="col-md-4">
+	<input type="text" id="word_book_name" class="form-control" name="word_book_name" placeholder="英単語帳">
+	</div>
+	</div><br /><br />
+ <span class="glyphicon glyphicon-exclamation-sign">備考</span>
+ <div class="form-group">
+ <div class="col-md-4">
+	<input type="text" id="biko" class="form-control" name="biko" placeholder="英単語の勉強用">
+	</div>
+	</div><br /><br />
+ <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-send">　登録 </span></button>
 </div><!-- /.row -->
 </div><!-- /.container -->
+</form>
 <div class="text-center">
- Copyright &copy; 2014 SofPyon, All Rights Reserved.
+ Copyright &copy; 2014 TakaoYamamoto, All Rights Reserved.
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="http://code.jquery.com/jquery.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="/js/bootstrap.min.js"></script>
+
 </body>
 </html>
